[tool.poetry]
name = "thord"
version = "0.1.0"
description = "ASGI Web Framework"
authors = ["Ordanis Sanchez <ordanisanchez@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.6"
pytest-mypy = "^0.3.2"
black = "18.9b0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
